don't fetch audio parts inline when doing imap mime parts on demand, bug 584523, r/sr=neil